# otus_cpp_prof_hw2

./: README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  main.cpp
src/tests/: CMakeLists.txt  tests.cpp
